# ML

./: .gitignore  README.md
Models/CNN/dogs_vs_cats/: .gitignore  README.md  cnn.pth  main.py  pyproject.toml  pyproject.toml.backup
Models/CNN/dogs_vs_cats/dvc_data/: data.py
Models/CNN/dogs_vs_cats/dvc_model/: __init__.py  cnn.py
Models/CNN/dogs_vs_cats/dvc_test/: test.py
Models/CNN/dogs_vs_cats/dvc_train/: train.py
Models/CNN/dogs_vs_cats/train/: __init__.py  train.py
Models/CNN/dogs_vs_cats/wandb/run-20241123_014546-a2g7kaa0/: run-a2g7kaa0.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_020328-fxwnttjv/: run-fxwnttjv.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_020438-m7d3fu6l/: run-m7d3fu6l.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_024526-7tnhc0as/: run-7tnhc0as.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_031112-spaaaody/: run-spaaaody.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_031318-hzdj9qgd/: run-hzdj9qgd.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_031401-n853iy1h/: run-n853iy1h.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_031455-uzbhyku0/: run-uzbhyku0.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_032327-dy0igjs2/: run-dy0igjs2.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_032339-gf2i7caj/: run-gf2i7caj.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_032622-snl6c3w1/: run-snl6c3w1.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_032645-sv97ipux/: run-sv97ipux.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_033438-2mznc39x/: run-2mznc39x.wandb
Models/CNN/dogs_vs_cats/wandb/run-20241123_033504-j29t6kjn/: run-j29t6kjn.wandb
Models/CV/CNN/LeNet/MNIST/: .gitignore  pyproject.toml
PyTorch_course/Homeworks/CNN/: pyproject.toml
PyTorch_course/Homeworks/CNN/app/: app.py  cnn.pth
PyTorch_course/Homeworks/CNN/data/: data.py  data_draft.py
PyTorch_course/Homeworks/CNN/model/: __init__.py  cnn.py
PyTorch_course/Homeworks/CNN/train/: cnn.pth  train.py
PyTorch_course/Homeworks/Task1/: .pre-commit-config.yaml  pyproject.toml
PyTorch_course/Homeworks/Task1/task1/: __init__.py
PyTorch_course/Seminars/seminar1/: pyproject.toml
PyTorch_course/Seminars/seminar1/1/: __init__.py
(+178 files in other folders)
