[tool.poetry]
name = "dogs-vs-cats"
version = "0.1.0"
description = ""
authors = ["Sashavav <vav110011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
mypy = "^1.13.0"
wandb = "^0.18.7"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "wandb"
]
