[tool.poetry]
name = "cnn"
version = "0.1.0"
description = ""
authors = ["Sashavav <vav110011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
