[tool.poetry]
name = "1"
version = "0.1.0"
description = "My first poetry project"
authors = ["Sashavav <vav110011@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
